--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -45,30 +45,18 @@
       </button>
       </center>
     </div>
+</div>
+<script>
 
-    <script>
-
-    // Declare global variables for banner style
-    
-    //Code to determine based on hash of user IP address
-    /*var left_right = {{ left_right }} ;
-    var up_down = {{ up_down }} ;
-    var versions = {{ versions }} ;
+  // Declare global variables for banner style
+  var desktopLayout = {{ desktop_layout }};
+  var mobileLayout = {{ mobile_layout }};
     if (window.innerwidth <500){
-        left_right=1;
-        var mobile=true;
+        var banner_style = String(mobileLayout);
       }
-    else{
-      var mobile=false;
+    else {
+      var banner_style = String(desktopLayout);
     }
-    var banner_style = String(left_right) + String(up_down) + String(versions);
-    */
-
-    /* Code for random determination of privacy banner
-      var left_right = Math.floor(Math.random() * 3);
-      var up_down= Math.floor(Math.random() * 2);
-      var versions=Math.floor(Math.random()*2)
-    */
 
       function disableScroll() { 
     // Get the current page scroll position 
@@ -86,40 +74,6 @@ function enableScroll() {
 } 
 
 function determine_layout() {
-
-      /*var x = document.getElementById("notification");
-      var body=document.getElementById("body");
-      var button2 = document.getElementById("button2");
-      var screenWidth=window.innerWidth;
-      var screenHeight=String(window.innerHeight -340)+"px";
-      if (String(left_right) == "0"){
-        x.style.left = "10px";
-        x.style.right="";
-      }
-      else if (String(left_right) == "1"){
-        x.style.left = "24px";
-        x.style.right="24px"
-      }
-      else if (String(left_right) == "2"){
-        x.style.left = "";
-        x.style.right="10px"
-      }
-      if (String(up_down) == "0"){
-        x.style.bottom=screenHeight;
-      }
-      else if (String(up_down) =="1"){
-        x.style.bottom="10px";
-      }
-      if (String(versions) == "0"){
-        button2.innerHTML="Read our cookie policy"
-        button2.setAttribute( "onClick", "javascript: readMore(), logEvent('click', 'button2_read_more');" )
-      }
-      else{
-        button2.innerHTML="Do not sell my information"
-        button2.setAttribute( "onClick", "javascript: myFunction(), enableScroll(), logEvent('click', 'button2_do_not_sell');" )
-      }*/
-      var desktop_layout=Math.floor(Math.random() * 8);
-      var mobile_layout=Math.floor(Math.random()*4);
       var x = document.getElementById("notification");
       var overlay=document.getElementById("myNav");
       var button2 = document.getElementById("button2");
@@ -128,45 +82,45 @@ function determine_layout() {
       var bannerScreenHeight=String(window.innerHeight-200)+"px";
       var middleScreenHeight=String((window.innerHeight)/3)+"px";
       x.style.display="block";
-      if (window.innerWidth>500){
-      if (String(desktop_layout) == "0"){
+      if (mobile == false){
+      if (String(desktopLayout) == "0"){
         x.style.bottom="10px";
         x.style.left = "10px";
         x.style.right="";
       }
-      if (String(desktop_layout) == "1"){
+      if (String(desktopLayout) == "1"){
         x.style.bottom="10px";
         x.style.left = "24px";
         x.style.right="24px";
         x.style.maxWidth=screenWidthString;
       }
-      if (String(desktop_layout) == "2"){
+      if (String(desktopLayout) == "2"){
         x.style.bottom="10px";
         x.style.left = "";
         x.style.right="10px"
       }
-      if (String(desktop_layout) == "3"){
+      if (String(desktopLayout) == "3"){
         x.style.bottom=screenHeight;
         x.style.left = "10px";
         x.style.right="";
       }
-      if (String(desktop_layout) == "4"){
+      if (String(desktopLayout) == "4"){
         x.style.bottom=bannerScreenHeight;
         x.style.left = "24px";
         x.style.right="24px";
         x.style.maxWidth=screenWidthString;
       }
-      if (String(desktop_layout) == "5"){
+      if (String(desktopLayout) == "5"){
         x.style.bottom=screenHeight;
         x.style.left = "";
         x.style.right="10px"
       }
-      if (String(desktop_layout) == "6"){
+      if (String(desktopLayout) == "6"){
         x.style.bottom=middleScreenHeight;
         x.style.left = "24px";
         x.style.right="24px";
       }
-      if (String(desktop_layout)=="7"){
+      if (String(desktopLayout)=="7"){
         x.style.display="none";
       }
     }
@@ -174,16 +128,16 @@ function determine_layout() {
     else{
       x.style.left = "24px";
       x.style.right="24px";
-      if (String(mobile_layout)=="0"){
+      if (String(mobileLayout)=="0"){
         x.style.bottom="10px"
       }
-      if (String(mobile_layout)=="1"){
+      if (String(mobileLayout)=="1"){
         x.style.bottom=middleScreenHeight;
       }
-      if (String(mobile_layout)=="2"){
+      if (String(mobileLayout)=="2"){
         x.style.bottom=screenHeight;
       }
-      if (String(mobile_layout)=="3"){
+      if (String(mobileLayout)=="3"){
         x.style.display="none";
       }
     }}
@@ -216,8 +170,7 @@ function determine_layout() {
         x.style.display = "none";
       }
       }
-    </script>
-</div>
+</script>
 <div class="footer">
-  <p><a href="https://www.freeprivacypolicy.com/blog/privacy-policy-url/" target="_blank">Privacy Policy</a> &nbsp; &nbsp;&nbsp; <a class="policy" onclick="linkClicked()">Do Not Sell My Information</a></p>
+  <p><a href="https://www.freeprivacypolicy.com/blog/privacy-policy-url/" target="_blank">Privacy Policy</a> &nbsp; &nbsp;&nbsp; <a class="policy" onclick="linkClicked()">Do Not Sell My Personal Information</a></p>
 {% endblock %}
