Fixed error with Do Not Sell Button not logging properly

--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -40,7 +40,7 @@
       <button type="button" onclick="enableScroll(), myFunction(), logEvent('click', 'button1_accept_cookies');">
         Accept cookies
       </button>
-      <button type="button" id="button2" onclick="myFunction()">
+      <button type="button" id="button2" onclick="myFunction(), logEvent('click', 'button2_do_not_sell')">
         Do not sell my information
       </button>
       </center>
