privacy policy and notice on all pages

--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -10,7 +10,10 @@
 <body onload = "determine_layout()" id="body">
     {% block body %}{% endblock %}
     {%block script %}
-    <script src = {{ url_for('static', filename='js/scripts.js') }}></script>
+    <script src = {{ url_for('static', filename='js/scripts.js') }}>
+</script>
+<script type="text/javascript" src="static\js\main.js">
+</script>
     {% endblock %}
 </body>
-</html
+</html>
