--- a/example_site/templates/privacypolicy.html
+++ b/example_site/templates/privacypolicy.html
@@ -4,6 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script>
+    // Determine if mobile for event logging, since no script from base.html
+    if (window.innerWidth < 500){
+          var mobile = true;
+          }
+          else{
+          var mobile = false;
+          }
+  </script>
+  <script src = {{ url_for('static', filename='js/scripts.js') }}>
+  </script>
   <title>Privacy Policy</title>
 </head>
 
@@ -20,7 +31,7 @@ Government or college staff sometimes review studies such as this one to make su
 <p>The knowledge/results that we get from this study may be (based upon its quality and quantity) published in a poster, paper, or presentation, after we remove any identifying information from quotes. We do not collect, share, or sell an personal information. 
 </p>
 <h2>RIGHT TO OPT-OUT</h2>
-<p>You may choose to opt-out of this study by clicking on the button below. If you click on that button, your data will be deleted and it will not be included in our academic study. Not clicking on the button below will be considered consent to include your logged interactions in this study. 
+<p>You may choose to opt-out of this study by clicking <a href="/optout/" onclick="navigator.sendBeacon(`${window.location}`, makeData('click', 'study_opt_out'))">here</a>. If you click on that button, your data will be deleted and it will not be included in our academic study. Not clicking on the button below will be considered consent to include your logged interactions in this study. 
 </p>
 <h2>SOURCE OF FUNDING</h2>
 <p>This study is supported by funds provided by Pomona College.
