Fixed pointer over do not sell link.

--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -47,6 +47,6 @@
     </div>
 </div>
 <div class="footer">
-  <p><a href="/privacypolicy/" onclick="logBeacon('click', 'link_privacy_policy')">Privacy Policy</a> &nbsp; &nbsp;&nbsp; <a class="policy" href="#" onclick="linkClicked(), logEvent('click', 'link_do_not_sell');">Do Not Sell My Personal Information</a></p>
+  <p><a href="/privacypolicy/" onclick="logBeacon('click', 'link_privacy_policy')">Privacy Policy</a> &nbsp; &nbsp;&nbsp; <a class="policy" onclick="linkClicked(), logEvent('click', 'link_do_not_sell');">Do Not Sell My Personal Information</a></p>
 </div>
 {% endblock %}
