Fixed bug with one-button logging

--- a/example_site/templates/index.html
+++ b/example_site/templates/index.html
@@ -95,7 +95,7 @@
     <div id="one_button" class="cookie-banner-container">
       <span class="close" onclick="myClose(), logEvent('click', 'button_x');"> ✕ </span><center>
         California residents have certain rights with regard to the sale of personal information to third parties. We use information collected through cookies or in other forms to improve experience on our site and pages, analyze how it is used and show personalized advertising.  At any point, you can opt out of the sale of all of your personal information by pressing "Do not sell my personal information". You can find out more in our privacy policy at the bottom of any page.
-      <button style="display:block" type="button" id="button0" onclick="myClose()">
+      <button style="display:block" type="button" id="button0" onclick="myClose(), logEvent('click', 'button_do_not_sell');">
         Do Not Sell My Information
       </button></center>  
     </div>
